--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Fira Code', monospace;
   color: white;
   background-color: rgba(18, 12, 42, 1);
+  padding: 2%;
 }
 
 
@@ -15,7 +16,6 @@ header {
   justify-content: space-between;
   align-items: center;
 }
-
 
 
 h1 {
@@ -49,7 +49,7 @@ div.title p {
 }
 
 .logo-container {
-  width: 200px;
+  width: 15%;
   display: flex;
 
 
@@ -88,14 +88,16 @@ li {
 .CV {
   border: 4px solid #9612E7;
   border-radius: 20px;
-  padding: 0.5% 2%;
-  margin: 1%;
-  margin-left: 3%;
   text-align: center;
   text-decoration: none;
 }
 
+#CV {
 
+  margin-right: 15px;
+  margin-left: 15px;
+
+}
 
 .title {
   padding-left: 30%;
@@ -203,6 +205,7 @@ a {
   flex: 1;
   padding: 2%;
   margin: 1%;
+  margin-left: 8%;
   border-left: 3px solid #9612E7;
 }
 
@@ -210,7 +213,7 @@ a {
   flex: 1;
   padding: 2%;
   margin: 1%;
-  padding-left: 4%;
+  padding-right: 5%;
 }
 
 .l-container {
@@ -304,108 +307,27 @@ img {
   vertical-align: middle;
 }
 
-.project-container {
-  max-width: 1000px;
-  margin: 50px auto;
-}
-
-.project {
-  margin: 30px;
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(6, 1fr);
+.projets {
+  display: flex;
+  flex-direction: row;
   align-items: center;
 }
 
-@media screen and (max-width: 768px) {
-  .project {
-    align-items: flex-start;
-  }
-}
-
-.project-content {
-  position: relative;
-  grid-column: 1/7;
-  grid-row: 1/-1;
-}
-
-@media (max-width: 600px) {
-  .project-content {
-    grid-column: 1/-1;
-    padding: 40px;
-  }
-}
-
-.project-content .project-label {
-  color: #64ffda;
-  font-family: monospace;
-}
-
-.project-content .project-title {
-  font-size: 2rem;
-  margin: 10px 0 30px;
-  color: #eee;
-}
-
-.project-content .project-details {
-  font-size: 15px;
-  line-height: 1.5;
-  color: #aaa;
-}
-
-.project-content .project-details p {
-  background-color: #252525;
-  padding: 20px 25px;
-}
-
-@media (max-width: 600px) {
-  .project-content .project-details p {
-    background-color: transparent;
-    padding: 20px 0;
-  }
-}
-
-.project-content .project-details ul {
+.contenu {
   display: flex;
-  margin-top: 20px;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
 }
 
-.project-content .project-details ul li {
-  margin-right: 20px;
-  color: #aaa;
-  font-family: monospace;
+.image {
+  width: 50%;
+  max-width: 100%;
 }
 
-.project-img {
-  position: relative;
-  z-index: -1;
-  background-color: #64ffda;
-  background: linear-gradient(0.4turn, #64ffda, #64ff8d);
-  border-radius: 2px;
-  grid-column: 6/-1;
-  grid-row: 1/-1;
-}
-
-@media screen and (max-width: 768px) {
-  .project-img {
-    height: 100%;
-  }
-}
-
-@media (max-width: 600px) {
-  .project-img {
-    grid-column: 1/-1;
-    opacity: 0.25;
-  }
-}
-
-
-
-@media screen and (max-width: 768px) {
-  .project-img img {
-    object-fit: cover;
-    width: auto;
-    height: 100%;
-  }
+.text {
+  width: 50%;
+  text-align: center;
+  margin-left: 2%;
+  margin-right: 2%;
 }
