--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,11 @@ h1 {
   margin: 0;
 }
 
+h3{
+  color: #9612E7;
+  margin-top: 0;
+}
+
 div.title h1:nth-of-type(2) {
   color: #9612E7;
 }
@@ -214,6 +219,7 @@ a {
   padding: 2%;
   margin: 1%;
   padding-right: 5%;
+
 }
 
 .l-container {
@@ -251,21 +257,7 @@ a {
   margin: 2%;
 }
 
-html {
-  box-sizing: border-box;
-}
 
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-html,
-body {
-  width: 100%;
-  height: 100%;
-}
 
 body {
   overflow-x: hidden;
@@ -287,6 +279,35 @@ button {
   outline: 0;
   cursor: pointer;
 }
+
+button {
+  border: 3px solid #9612e7;
+  background-color: #9612e7;
+  border-radius: 20px 20px 20px 20px;
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s, padding 0.5s; /* Combine transitions into a single line */
+}
+
+button:hover {
+  background-color: #32246C;
+  padding: 15px;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+  background-color: #9612e7;
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 
 ul,
 ol {
@@ -313,6 +334,8 @@ img {
   align-items: center;
 }
 
+
+
 .contenu {
   display: flex;
   flex-direction: row;
@@ -330,4 +353,14 @@ img {
   text-align: center;
   margin-left: 2%;
   margin-right: 2%;
+}
+
+.reseaux{
+  width: 20%;
+}
+
+#reseaux{
+  margin-top: 5%;
+  display: flex;
+  text-align: center;
 }
